# webdns

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
dns-backend/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.example.toml
dns-backend/src/: config.rs  dns.rs  main.rs  version.rs  ws.rs
docs/: README.md  cloudflare-tunnel.md  dns-mail-check-google.com.html  dns-mail-check-outlook.com.html
docs/app/: config-be.json  config.json  demo.jsonl  index.html  manifest.webmanifest  sw.js
webapp/: .gitignore  README.md  generate-icons.sh  index.html  package.json  tsconfig.json  vite.config.js  vitest.config.ts
webapp/public/: config.json
webapp/scripts/: generate-build-info.mjs  render-svg.cjs
webapp/src/: AuthExpiredOverlay.tsx  DemoProgressBar.test.tsx  DemoProgressBar.tsx  MailDnsCheckReportView.tsx  QueryInputPreview.test.tsx  QueryInputPreview.tsx  RecordCliHintModal.test.tsx  RecordCliHintModal.tsx  RecordResultCard.jsx  RecordResultCard.test.tsx  RecordResultCard.tsx  RecordTypeGroups.test.tsx  RecordTypeGroups.tsx  RecordTypeHelpModal.jsx  RecordTypeHelpModal.test.tsx  RecordTypeHelpModal.tsx  RecordTypePicker.tsx  SrvTlsaFields.tsx  apiKeyStore.js  apiKeyStore.ts  app.jsx  app.tsx  authProbe.test.ts  authProbe.ts  authProxyStore.ts  copyToClipboard.test.ts  copyToClipboard.ts  demoMode.test.ts  demoMode.ts  displayPrefsStore.js  displayPrefsStore.ts  dnsServerStore.js  dnsServerStore.ts  formatCliHints.test.ts  formatCliHints.ts  formatDuration.test.ts  formatDuration.ts  formatRecordResult.js  formatRecordResult.ts  (+39 more)
(+170 files in other folders)
